fixed hiding of submit buttons; wrapping of console.log to protect against missing console object and to enable disabling of all logging

--- a/application/css/v2.less
+++ b/application/css/v2.less
@@ -921,6 +921,12 @@ a {
 		left: 629px;
 		right: 0;
 	}
+	input[type="submit"] {
+		visibility: hidden;
+		position: absolute;
+		width: 0;
+		height: 0;
+	}
 	.field-group {
 		position: relative;
 		z-index: 1010;
@@ -962,6 +968,7 @@ a {
 				width: 0;
 				height: 0;
 			}
+
 			textarea {
 				.box-sizing;
 				border: none;
